fix: align center divs on landing page:

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,8 @@ body {
     top: 0;
     left: 0;
 }
+
+.start-game {
+    display: flex;
+    flex-direction: column;
+}
